<resources>
    <string name="app_name">Dormitory Finder</string>
    <string name="login">Login...</string>
    <string name="dorm_room">Dormitory Finder</string>
    <string name="get">Get Room</string>
    <string name="post">Post Room</string>
    <string name="profile">Profile</string>
    <string name="LogOut">Log Out</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="fill_information">Fill Information</string>
    <string name="full_name">Full Name</string>
    <string name="complete_address">Complete Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="upload_image">Upload Image</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="update_profile">Update Profile</string>
    <string name="ok">OK</string>
    <string name="search">Search</string>
    <string name="get_room">Get Room</string>
    <string name="search_city">Search City</string>
    <string name="history">History</string>
    <string name="title_activity_maps">Map</string>
    <string name="city">City</string>
    <string name="where_you_want_to_go">Where you want to go!!!</string>
</resources>
