<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:android="http://schemas.android.com/apk/res/android" />
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shaan.dormroom.PostRoom">

    <TextView
        android:id="@+id/fillinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/fill_information"
        android:textAlignment="center"
        android:textSize="40sp" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fillinfo">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/full_name"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/a">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/completeaddress"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/complete_address"
            android:inputType="textPostalAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/city"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/c">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/mobilenumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/mobile_number"
            android:inputType="textPostalAddress"/>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:id="@+id/e"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/d">
    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_weight="1"
        app:srcCompat="@android:drawable/btn_star" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/upload_image"
            android:onClick="browseImage"
            style="?android:attr/buttonBarButtonStyle"
            android:textAllCaps="false"/>
    </LinearLayout>

    <Button
        android:layout_below="@+id/e"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/submit"
        android:onClick="Submit"
        style="?android:attr/buttonBarButtonStyle"
        android:textAllCaps="false"/>
</RelativeLayout>
</ScrollView>