<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shaan.dormroom.Update_Profile">

    <TextView
        android:id="@+id/a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/update_profile"
        android:textAlignment="center"
        android:textSize="40sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/a">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/full_name"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/mobile_number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/mobile_number"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/d"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/c"
        android:text="@string/ok"
        android:onClick="Update_Profile"
        android:fontFamily="cursive"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"/>
</RelativeLayout>
</ScrollView>