<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/lll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/toolbar">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/search_location"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/where_you_want_to_go"/>
        </android.support.design.widget.TextInputLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:onClick="Geo_Location"
                android:text="Go"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>
        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/Mymap"
            android:layout_above="@+id/ll"
            android:layout_below="@+id/lll"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="in.saurabh.www.dormitoryfinder.Homepage" />

        <LinearLayout
            android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true">
    <Button
        android:id="@+id/get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_room"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_weight="1"
        android:onClick="Get_Room"
        android:textAllCaps="false"/>
        <Button
            android:id="@+id/post"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="PostRoom"
            android:text="@string/post"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:layout_weight="1"/>


</LinearLayout>
    </RelativeLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/nevigation_header">
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>